--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,15 +10,19 @@
         <item>Salah</item>
     </string-array>
 
-    <string name="text_1">1. Klik Tombol Latihan pada Menu</string>
-    <string name="text_2">2. Klik secara berurutan, dimulai text pertama sampai terakhir</string>
-    <string name="text_3">3. Kemudian, mulai lah baca text tersebut</string>
-    <string name="text_4">4. Kemudian, Jawab lah baca pertanyaan tersebut</string>
-    <string name="text_5">5. Anda akan mendapatkan hasil Kemampuan Efektif Membaca</string>
+    <string name="text_1">Klik Tombol Latihan pada Menu</string>
+    <string name="text_2">Klik secara berurutan, dimulai text pertama sampai terakhir</string>
+    <string name="text_3">Kemudian, mulai lah baca text tersebut</string>
+    <string name="text_4">Kemudian, Jawab lah baca pertanyaan tersebut</string>
+    <string name="text_5">Anda akan mendapatkan hasil Kemampuan Efektif Membaca</string>
+    <string name="text_6">Setelah teks pertama selesai dibaca, lanjutkanlah dengan teks berikutnya</string>
+    <string name="text_7">Klik menu “grafik” apabila ingin melihat data statistik hasil latihan teks pertama hingga teks terakhir.</string>
 
     <string name="info">KEM (Kemampuan Efektif Membaca) adalah kecepatan yang dicapai oleh pembaca berdasarkan rumus banyaknya kata di bagi panjangnya waktu yang di perlukan</string>
     <string name="tentang">Aplikasi dibuat guna mengukur tingakat Kecepatan Efektif Membaca, Aplikasi ini dapat membantu siswa dan guru dalam proses pembelajaran </string>
+    <string name="version">Version 1.0</string>
     <string name="perancang">Septia Sari Wulandari - 1405531</string>
+    <string name="pengembang1">1. Dewi Mustikaningsih \n2. Rizky Fauzi Rahman</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
